force-app/main/default/objects/EPPS_Fee__mdt/EPPS_Fee__mdt.object-meta.xml
<CustomObject>
    <description>Used with addFee API call to determine which fields to be sent and other details</description>
    <label>EPPS Fee</label>
    <pluralLabel>EPPS Fees</pluralLabel>
</CustomObject>