force-app/main/default/objects/EPPS_Fee__mdt/fields/Fee_Description__c.field-meta.xml
<CustomField>
    <fullName>Fee_Description__c</fullName>
    <description>Value to be specified in Description field for addFee</description>
    <inlineHelpText>Value to be specified in Description field for addFee</inlineHelpText>
    <label>Fee Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>