force-app/main/default/objects/EPPS_Fee__mdt/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>Value to be specified in FeeType field for addFee</description>
    <inlineHelpText>Value to be specified in FeeType field for addFee</inlineHelpText>
    <label>Fee Type</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>