force-app/main/default/objects/EPPS_Fee__mdt/fields/Is_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Is_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When marked as true, additional fields will be sent as part of addFee</description>
    <inlineHelpText>When marked as true, additional fields will be sent as part of addFee</inlineHelpText>
    <label>Is Settlement</label>
    <type>Checkbox</type>
</CustomField>