force-app/main/default/objects/EPPS_Fee__mdt/fields/PaidToContactName__c.field-meta.xml
<CustomField>
    <fullName>PaidToContactName__c</fullName>
    <description>Value passed for PaidToContactName when its not for settlement</description>
    <inlineHelpText>Value passed for PaidToContactName when its not for settlement</inlineHelpText>
    <label>PaidToContactName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>