force-app/main/default/objects/EPPS_Fee__mdt/fields/PaidToName__c.field-meta.xml
<CustomField>
    <fullName>PaidToName__c</fullName>
    <description>Value passed for PaidToName when its not for settlement</description>
    <inlineHelpText>Value passed for PaidToName when its not for settlement</inlineHelpText>
    <label>PaidToName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>