force-app/main/default/objects/EPPS_Fee__mdt/fields/Send_to_EPPS__c.field-meta.xml
<CustomField>
    <fullName>Send_to_EPPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this fee type should be sent to EPPS, some fees are internally managed and should not be sent.</description>
    <inlineHelpText>If this fee type should be sent to EPPS, some fees are internally managed and should not be sent.</inlineHelpText>
    <label>Send to EPPS</label>
    <type>Checkbox</type>
</CustomField>